# astrolab

./: .gitignore  README.md
Betelgeuse/: Betelgeuse.ipynb  Betelgeuse_VO_timeseries.parquet  HD_29333_VO_timeseries.parquet
CG/: README.md  cg.ipynb
GalaxyZooML/: README.md  pyproject.toml
GalaxyZooML/gzml/: __init__.py  __main__.py  bootstrap.py
GalaxyZooML/notebooks/: ML_1.ipynb  ML_1.md  ML_2.ipynb  ML_2.md  ML_3.imd  ZooML2.ipynb  ZooML_obsolete.ipynb
GalaxyZooML/scripts/: predict_gz2.py  train_gz2.py
